# soroban-rough-work

./: .gitignore  README.md  deploy.js  entry-data.js  extract-memo.js  fbump2.js  fees.rs  fest.js  fest2.js  get-xdr.js  native.js  output.json  package-lock.json  package.json  simfee.js  test_horizon.js  uploadWasm.js
p22-txmeta-test/: Cargo.toml
p22-txmeta-test/src/: main.rs
soroban-hello-world/contracts/hello-world/src/: lib.rs
soroban-ttl/: Cargo.toml
soroban-ttl/src/: lib.rs
zephyr-fee-agg/: Cargo.toml  zephyr.toml
zephyr-fee-agg-imp/: Cargo.toml  zephyr.toml
zephyr-fee-agg-imp/src/: lib.rs
zephyr-fee-agg/src/: lib.rs
zephyr-fee-stats/: Cargo.toml  zephyr.toml
zephyr-fee-stats/src/: lib.rs
zephyr-hello-world/: Cargo.toml
zephyr-hello-world/src/: lib.rs
