[package]
name = "zephyr-fee-agg"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { version = "0.1.7" }
ta = {version = "0.5.0", features = ["serde"]}

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
